
Release 5.2.1 (unreleased)
==========================

Bug fixes
---------

- Fix crash in some polygon triangulation cases.

- Fix incorrect GUI-defined DOF locking for coupling with code_aster.

- Fix incorrect access to per-scalar density in some cases.

- Fix error on unconverged linear solver using PETSc.

- Fix in weakly compressible algorithm for scalar diffusion terms when
  multiple scalars are present.

- Fix empty mesh in error postprocessing for linear solvers.

- Fix for possible bug in postprocessing edges mesh extraction.

- Fix for OpenMP multigrid-preconditioned Conjugate Gradient convergence issue.
  This requires using a flexible variant of the Conjugate Gradient when
  using a Gauss-Seidel smoother with multiple threads.

- Fix spurious mapping of previous mass flux with order 1 in time scheme.

- Fix pressure drop by zone computation (gravity term twice multiplied by
  density at outlet boundary).

- Lagrangian module: fix particle flow rate per class reporting in listing file
  (GitHub issue #4).

- GUI: fix failure to cleanly stop running computations on some
  systems (Mantis issue #242).

- Rewrite pressure correction in pressure increment (fix computation of
  pressure L2 residual if nterup > 1).

- Fix minor bug in the verification step (wrong format for the error message).

- Fix bug in initialization of the wall condensation model.

- Fix crash in restart using coupled RSM model from non-RSM computation
  (issue #252).

- Radiative model: fix radiative flux values at parallel boundaries.

Numerics:

- Add choice of inexact (flexible) preconditioned congugate gradient.
  * When using multiple threads and multigrid preconditioning with a
    Gauss-Seidel smoother, this choice is set by default over the
    standard preconditioned congugate gradient.

Release 5.2.0 (March 30 2018)
=============================

Physical modelling
------------------

- Atmospheric model: add new BCs for open-boundary flow such as atmospheric